Clean up the warning.